Fix: hide edit link on small screens

--- a/src/assets/less/header.less
+++ b/src/assets/less/header.less
@@ -125,6 +125,7 @@ a.nav-device {
   @media (max-width: @medium-size) {
     width: 55%;
     text-align: right;
+    .edit { display: none; }
   }
 }
 
